--- a/Launcher/Launcher.Module.Inspection/Launcher.Module.Inspection.csproj
+++ b/Launcher/Launcher.Module.Inspection/Launcher.Module.Inspection.csproj
@@ -70,8 +70,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AboutInspection.cs" />
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Search.cs" />
     <Compile Include="ViewModels\MainInspectionViewModel.cs" />
     <Compile Include="ViewModels\NoticeViewModel.cs" />
     <Compile Include="Views\MainInspectionView.xaml.cs">
