--- a/Launcher/Launcher.Core.Gui/Launcher.Core.Gui.csproj
+++ b/Launcher/Launcher.Core.Gui/Launcher.Core.Gui.csproj
@@ -66,6 +66,9 @@
   <ItemGroup>
     <Resource Include="Entypo.ttf" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Image\imageButtonExitDocument.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
