--- a/Launcher/Launcher.Module.Document/Launcher.Module.Document.csproj
+++ b/Launcher/Launcher.Module.Document/Launcher.Module.Document.csproj
@@ -139,6 +139,9 @@
       <Name>Launcher</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="imageButtonExitDocument.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
