--- a/Launcher/Launcher.Core.Gui/Launcher.Core.Gui.csproj
+++ b/Launcher/Launcher.Core.Gui/Launcher.Core.Gui.csproj
@@ -75,10 +75,15 @@
     <Resource Include="Entypo.ttf" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Design\LoginScreen.png" />
+    <Content Include="Design\RegistrationScreen.png" />
+    <Content Include="Design\Картинка Фон.png" />
     <Content Include="Image\imageButtonExitDocument.png" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Design\" />
+    <None Include="Design\LoginScreen.psd" />
+    <None Include="Design\RegistrationScreen.psd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
