--- a/Launcher/Launcher.Module.Document/packages.config
+++ b/Launcher/Launcher.Module.Document/packages.config
@@ -3,4 +3,5 @@
 <packages>
   <package id="Caliburn.Micro" version="2.0.1" targetFramework="net45" />
   <package id="Caliburn.Micro.Core" version="2.0.1" targetFramework="net45" />
+  <package id="MahApps.Metro" version="1.0.0.0" targetFramework="net45" />
 </packages>
