--- a/Launcher/Launcher.Core.Gui/Launcher.Core.Gui.csproj
+++ b/Launcher/Launcher.Core.Gui/Launcher.Core.Gui.csproj
@@ -52,7 +52,9 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -84,6 +86,10 @@
     <Page Include="Style\ListBox.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Style\ListBoxItemAndTemplateAndFocusedStyle.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Style\TextBox.xaml">
       <SubType>Designer</SubType>
