--- a/Launcher/Launcher/Launcher.csproj
+++ b/Launcher/Launcher/Launcher.csproj
@@ -168,6 +168,9 @@
     <Compile Include="Views\Flyouts\FlyoutSearchView.xaml.cs">
       <DependentUpon>FlyoutSearchView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\FullSizeWindowModule.xaml.cs">
+      <DependentUpon>FullSizeWindowModule.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\LauncherView.xaml.cs">
       <DependentUpon>LauncherView.xaml</DependentUpon>
     </Compile>
@@ -202,6 +205,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\Flyouts\FlyoutSearchView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\FullSizeWindowModule.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
