--- a/Launcher/Launcher.Core/packages.config
+++ b/Launcher/Launcher.Core/packages.config
@@ -2,6 +2,7 @@
 
 <packages>
   <package id="Caliburn.Micro.Core" version="2.0.1" targetFramework="net45" />
+  <package id="Extended.Wpf.Toolkit" version="2.4" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.0.1-ALPHA047" targetFramework="net45" />
   <package id="MahApps.Metro.Resources" version="0.4.0.0" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.94.0" targetFramework="net45" />
