--- a/Launcher/Launcher/packages.config
+++ b/Launcher/Launcher/packages.config
@@ -6,6 +6,7 @@
   <package id="Caliburn.Micro.Logging" version="2.0.3.0" targetFramework="net45" />
   <package id="Caliburn.Micro.Start" version="2.0.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+  <package id="Extended.Wpf.Toolkit" version="2.4" targetFramework="net45" />
   <package id="MahApps.Metro" version="0.14.0.0" targetFramework="net45" />
   <package id="MahApps.Metro.Resources" version="0.3.0.0" targetFramework="net45" />
   <package id="Microsoft.Composition" version="1.0.30" targetFramework="net45" />
