I add a new Computer

--- a/Launcher/Launcher.Module.Document/Launcher.Module.Document.csproj
+++ b/Launcher/Launcher.Module.Document/Launcher.Module.Document.csproj
@@ -88,12 +88,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\MahApps.Metro.1.0.0.0\lib\net45\MahApps.Metro.dll</HintPath>
     </Reference>
-    <Reference Include="MoonPdfLib">
+    <Reference Include="MoonPdfLib, Version=0.3.0.0, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Launcher.Core\Lib\MoonPdfLib.dll</HintPath>
     </Reference>
     <Reference Include="MouseKeyboardActivityMonitor, Version=3.0.1.29653, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Downloads\MoonPdf-0.3.0-x86\MoonPdf-0.3.0-x86\MouseKeyboardActivityMonitor.dll</HintPath>
+      <HintPath>..\Launcher.Core\Lib\MouseKeyboardActivityMonitor.dll</HintPath>
     </Reference>
     <Reference Include="pdfbox-1.8.7">
       <HintPath>..\Launcher.Core\Lib\pdfbox-1.8.7.dll</HintPath>
@@ -124,6 +125,7 @@
     <Compile Include="ViewModels\DocumentViewModel.cs" />
     <Compile Include="ViewModels\HistoryViewModel.cs" />
     <Compile Include="ViewModels\MainDocViewModel.cs" />
+    <Compile Include="ViewModels\OpenDocument.cs" />
     <Compile Include="Views\DocumentListView.xaml.cs">
       <DependentUpon>DocumentListView.xaml</DependentUpon>
     </Compile>
@@ -148,8 +150,8 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\DocumentView.xaml">
-      <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\HistoryView.xaml">
       <SubType>Designer</SubType>
