--- a/Launcher/Launcher.Module.Inspection/packages.config
+++ b/Launcher/Launcher.Module.Inspection/packages.config
@@ -2,4 +2,5 @@
 
 <packages>
   <package id="Caliburn.Micro.Core" version="2.0.1" targetFramework="net45" />
+  <package id="Extended.Wpf.Toolkit" version="2.4" targetFramework="net45" />
 </packages>
