--- a/Launcher/Launcher.Core/Launcher.Core.csproj
+++ b/Launcher/Launcher.Core/Launcher.Core.csproj
@@ -104,6 +104,7 @@
     <None Include="Resources\Entypo.ttf" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Lib\AxInterop.AcroPDFLib.dll" />
     <Content Include="Lib\bcprov-jdk15-1.44.dll" />
     <Content Include="Lib\commons-logging.dll" />
     <Content Include="Lib\fontbox-1.8.7.dll" />
@@ -114,6 +115,7 @@
     <Content Include="Lib\IKVM.OpenJDK.Text.dll" />
     <Content Include="Lib\IKVM.OpenJDK.Util.dll" />
     <Content Include="Lib\IKVM.Runtime.dll" />
+    <Content Include="Lib\Interop.AcroPDFLib.dll" />
     <Content Include="Lib\libmupdf.dll" />
     <Content Include="Lib\MoonPdfLib.dll" />
     <Content Include="Lib\MouseKeyboardActivityMonitor.dll" />
