--- a/Launcher/Launcher/Launcher.csproj
+++ b/Launcher/Launcher/Launcher.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Controls\StartupTasks.cs" />
     <Compile Include="Controls\ThemeManager.cs" />
     <Compile Include="Controls\ViewLocator.cs" />
+    <Compile Include="KeyboardProperty.cs" />
     <Compile Include="Model\ModuleItem.cs" />
     <Compile Include="Services\IServiceLocator.cs" />
     <Compile Include="Services\MefServiceLocator.cs" />
